# bayes_pol

./: .gitattributes  .readthedocs.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
bayes_pol/: __init__.py  _version.py  faraday_model.py  utils.py
docs/: requirements.txt
docs/source/: bayes_pol.rst  conf.py  index.rst  modules.rst
docs/source/notebooks/: faraday_model  faraday_model.ipynb
tests/: test_faraday_model.py
